--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -1,10 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
+{{> head}}
 <body>
-<h1>TEST</h1>
+<div class="container">
+    {{{body}}}
+</div>
+
+{{> footer}}
 </body>
 </html>
